fix: extraction of cumulative year feat: popup dialog for semester grades feat: non_mobile ui implemented for grades fix: hide select when changing tabs fix: shorten header buttons on mobile

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -57,7 +57,7 @@ html, body {
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
+    --primary: 272.1 71.7% 47.1%;
     --primary-foreground: 0 0% 98%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
